* Add Fuse.String#lastIndexOf if missing from the sandboxed String. [jddalton]

* Allow Fusebox to remove the iframes used to create the native sandboxes in Opera 9.5-10a. [jddalton]

* Add support for Peppy and Dojo Acme JavaScript CSS Selector engines and update other engines. [jddalton] 

* Correct many coding issues related to the unit test rewrites. [jddalton]
  Note: Backwards compatibility warning.
   - Reduce repeated code by creating/removing aliases:
     * Ajax.Response#getAllHeaders -> Ajax.Response#getAllResponseHeaders
     * Ajax.Response#getResponseHeader -> Ajax.Response#getHeader
     * Fuse.Util.$$() -> Fuse.query()
     * Remove Fuse.RegExp#match alias of Fuse.RegExp#test
 
   - New Fixes/Optimizations
     * Make Fuse.Class, Fuse.Range and others perform as if by a new expression when they, the constructors, are called as a function.
     * Ensure, for IE, that Element#writeAttribute coerces values to strings before setting them. [kangax]
     * Make more methods return extended natives
     * Address Element#clonePosition issue with hidden elements in Safari 2.x (needs refining)
     * Optimize Element#getOpacity by avoiding calls to Element#getStyle
     * Add Fusebox Array.create() and Array.fromArray() methods
     * Ensure NWMatcher, Sizzle, Slick, and Sly engines will run against selector unit tests
     * Make Fusebox String() returns an empty string when called with no argument given
     * Ensure Fusebox Array#filter, Array#every, Array#map, and Array#some are only wrapped once
     * Correct behavior of Fusebox Object when called as a function
     * Reduce code needed for "__proto__" support in Fuse.Fusebox._createNatives()
     * Make Fuse.Fusebox(mode) accept a mode argument to allow devs to choose the method in which a sandbox is created
     * Create the Field.EventObserver, Form.EventObserver, Field.TimedObserver, and Form.TimedObserver constructors using named functions for better debugging