@@ -405,12 +405,32 @@ new Test.Unit.Runner({
   },
 
   'testStripTags': function() {
-    this.assertEqual('hello world', Fuse.String('hello world').stripTags());
-    this.assertEqual('hello world', Fuse.String('hello <span>world</span>').stripTags());
-    this.assertEqual('hello world', Fuse.String('<a href="#" onclick="moo!">hello</a> world').stripTags());
-    this.assertEqual('hello world', Fuse.String('h<b><em>e</em></b>l<i>l</i>o w<span class="moo" id="x"><b>o</b></span>rld').stripTags());
-    this.assertEqual('hello world', Fuse.String('hello wor<input type="text" value="foo>bar">ld').stripTags());
-    this.assertEqual('1\n2',        Fuse.String('1\n2').stripTags());
+    this.assertEqual('hello world',
+      Fuse.String('hello world').stripTags());
+
+    this.assertEqual('hello world',
+      Fuse.String('hello <span>world</span>').stripTags());
+
+    this.assertEqual('hello world',
+      Fuse.String('<a href="#" onclick="moo!">hello</a> world').stripTags());
+
+    this.assertEqual('hello world',
+      Fuse.String('h<b><em>e</em></b>l<i>l</i>o w<span class="moo" id="x"><b>o</b></span>rld').stripTags());
+
+    this.assertEqual('hello world',
+      Fuse.String('hello wor<input type="text" value="foo>bar">ld').stripTags());
+ 
+    this.assertEqual('1\n2',
+      Fuse.String('1\n2').stripTags());
+
+    this.assertEqual('one < two blah baz', Fuse.String(
+      'one < two <a href="# "\ntitle="foo > bar" >blah</a > <input disabled>baz').stripTags(),
+      'failed to ignore none tag related `<` or `>` characters');
+
+    this.assertEqual('1<invalid a="b&c"/>2<invalid a="b<c">3<invald a="b"c">4<invalid  a =  "bc">', Fuse.String(
+      '<b>1</b><invalid a="b&c"/><img a="b>c" />2<invalid a="b<c"><b a="b&amp;c">3</b>' +
+      '<invald a="b"c"><b a="b&#38;c" >4</b><invalid  a =  "bc">').stripTags(),
+      'failed to ignore invalid tags');
   },
 
   'testStripScripts': function() {
